feat: 장바구니 조회를 위한 상품 Finder 확장
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>